@@ -186,6 +186,7 @@ b bugfix
               + utils/superop_to_choi
               * utils/unravel_index works on vectors of indices
               * utils/tensorbasis returns the integer locality of each element
+              * utils/tensorsum can now handle matrices and any number of inputs
               * seq/*: sign convention changed
               * examples/nmr_sequences updated
               * markov/bath class rewritten, now supports fermionic baths as well
